--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": true,
-        "outDir": "dist/"
+        "outDir": "dist/",
+        "experimentalDecorators":true,
+         "emitDecoratorMetadata": true
     }
 }
